@@ -45,8 +45,6 @@
  * There's attributes in BlockType which use ArrayList, and I think I'd rather they
    just be arrays.  Should look into that.
  
- * Notice dialog when something in xray.properties gets overwritten
-
  * Pull the grass colorization color from a point on misc/grasscolor.png
 
  * Snow has data, as it turns out...
